--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!-- Unit 7 Project
 Requirements
 [  ] three variables
-[  ] animation that moves position
-[  ] animation that changes size
+[ yes ] animation that moves position
+[  yes] animation that changes size
 [  ] three new HTML elements/CSS Declarations
 
 Select ONE Additional 
-[ no ] Feature 1 - Use an Incrementing Shortcut 
+[ yes ] Feature 1 - Use an Incrementing Shortcut 
 [ no ] Feature 2 - Move Object with Mouse
 [ no ] Feature 3 - Repeat Animation
 [ no ] Feature 4 - Text on the Canvas
