--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@ Select ONE Additional
     <title>Unit 7 Project</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.min.js"></script>
-    <style>
-            font-family: namaku;
-      src: url(https://cdn.glitch.global/de326115-f585-477c-8a3c-4220c7f557b9/Namaku%5B1%5D.ttf?v=1730996746705);</style>
+    <style> 
+      #title {font-family: cursive;}
+      
+           </style>
   </head>
 
   <body>
     <hr size="15" color="white">
     <h1 id="title">
-      New Year, Cherry Blossoms
+      New Year, New Blossoms
     </h1>
     
       <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
