🐎👛 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@ Select ONE Additional
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Unit 7 Project</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Cherry Blossoms</title>
+   <link href="style.css" rel="stylesheet" type="text/css" />
+   <link  rel= "icon"
+          type= "image/x-icon" 
+          href= "https://cdn.glitch.global/c0629e55-342a-4404-bdc2-970f55327f86/cherryblossom.png?v=1736527779431" />
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.min.js"></script>
     <style> 
       #title {font-family: cursive;}
@@ -29,6 +33,7 @@ Select ONE Additional
   </head>
 
   <body>
+    
     <hr size="15" color="white">
     <h1 id="title">
       New Year, New Blossoms
